# vst-kick-synth

./: .gitignore  .gitmodules  Cargo.toml  LOCAL_DEVELOPMENT.md  README.md  RELEASE.md  audio-process-flow.md  build.rs  build_errors.txt  errors.txt  ideas.txt  report.txt
.cargo/: config.toml
.github/workflows/: release.yml
cmake/auv2/: CMakeLists.txt
src/: corrosion.rs  drive.rs  editor.rs  filter.rs  filter_v2.rs  filter_v3.rs  lib.rs  main.rs  nam.rs  params.rs  presets.rs  voice.rs
src/cpp/: nam_wrapper.cpp  nam_wrapper.h
src/editor/: data.rs  my_peak_meter.rs  panels.rs  param_knob.rs  single_knob.rs  util.rs  vertical_param_slider.rs  widgets.rs
src/resource/: style.css  style_append.css
src/resource/nam/: ART_PRO_VLA.nam  Culture_Vulture_HIGH_OD_Bias 3_Drive_14_PK5.nam  Philips_EL3541D.nam  TAPE_OUT_JH24_30-450_L.nam
src/resource/presets/: aggressive_techno.json  classic_808.json  convolution_cool_bass.json  convolution_hihat.json  convolution_kick.json  convolution_offbeat.json  convolution_snare.json  deep_house_thump.json  dirty_tube.json  dubstep_weight.json  glitchy_zap.json  industrial_crunch.json  soft_pop.json  vintage_tape.json  vinyl_soul.json
src/resource/presets/factory/bass/: convolution_cool_bass.json  convolution_cool_bass2.json  dusty_new_808.json  dusty_old_808.json  gentle_anglegrinder.json  rosetta_stone.json  soft_fur.json  solid_tungsten.json  wet_concrete.json  wobwob_wob_wob_wob_1.json  wobwob_wob_wob_wob_2.json  wobwob_wob_wob_wob_3.json  wobwob_wob_wob_wob_4.json  wobwob_wob_wob_wob_5.json
src/resource/presets/factory/kick/: aggressive_caterpillar.json  aggressive_techno.json  classic_808.json  clean_mouse.json  convolution_kick.json  convolution_offbeat.json  deep_house_thump.json  dirty_tube.json  driver_seat.json  dubstep_weight.json  dusty_book.json  filtered_coffee.json  fudge_brownie.json  gained_car.json  gained_house.json  glitchy_zap.json  hard_carbide.json  industrial_crunch.json  mid_velvet.json  power_snap.json  smack_redwood.json  smack_rosewood.json  soft_pop.json  sub_sonic.json  tech_ruby.json  vintage_tape.json  vinyl_soul.json
src/resource/presets/factory/snare/: bb_gun_snare.json  convolution_hihat.json  convolution_snare.json  kick_snare.json  punchy_snare.json  smack_snare.json  solid_snare.json  wooden_snare.json
src_blueprint/editor/: param_knob.rs
vizia-patched/crates/vizia_core/src/views/: picklist.rs
